--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -7,7 +7,7 @@
     android:layout_height="150dp">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardview_hot_item"
+        android:id="@+id/cardview_home_item"
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:clickable="true"
@@ -35,6 +35,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:text="TextView"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/image_home_photo"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/text_home_describe"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="TextView"
@@ -42,17 +53,6 @@
                 app:layout_constraintBottom_toBottomOf="@+id/image_home_photo"
                 app:layout_constraintStart_toEndOf="@+id/image_home_photo"
                 app:layout_constraintTop_toTopOf="@+id/image_home_photo" />
-
-            <TextView
-                android:id="@+id/text_home_describe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="TextView"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/image_home_photo"
-                app:layout_constraintStart_toStartOf="parent" />
 
             <ImageView
                 android:id="@+id/image_home_photo"
@@ -82,6 +82,7 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:scaleType="fitCenter"
                 android:tint="#F9DB49"
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -128,6 +129,7 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
+                android:layout_marginEnd="8dp"
                 android:paddingRight="0dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="@+id/text_home_collection_number"
