--- a/app/src/main/res/layout/item_profile_collectiontrip.xml
+++ b/app/src/main/res/layout/item_profile_collectiontrip.xml
@@ -7,7 +7,7 @@
     android:layout_height="150dp">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardview_hot_item"
+        android:id="@+id/cardview_collectiontrip"
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:clickable="true"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/image_home_backgroud"
+            android:id="@+id/image_collectiontrip"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:alpha="0.4"
@@ -31,31 +31,30 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/text_home_title"
+                android:id="@+id/text_collectiontrip_describe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:text="TextView"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="@+id/image_collectiontrip_photo"
+                app:layout_constraintStart_toEndOf="@+id/image_collectiontrip_photo"
+                app:layout_constraintTop_toTopOf="@+id/image_collectiontrip_photo" />
+
+            <TextView
+                android:id="@+id/text_colletiontrip_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="TextView"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/image_home_photo"
-                app:layout_constraintStart_toEndOf="@+id/image_home_photo"
-                app:layout_constraintTop_toTopOf="@+id/image_home_photo" />
-
-            <TextView
-                android:id="@+id/text_home_describe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="TextView"
-                android:textColor="@color/white"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/image_home_photo"
+                app:layout_constraintBottom_toTopOf="@+id/image_collectiontrip_photo"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <ImageView
-                android:id="@+id/image_home_photo"
+                android:id="@+id/image_collectiontrip_photo"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="8dp"
@@ -68,7 +67,7 @@
                 app:srcCompat="@mipmap/icon_moai" />
 
             <ImageButton
-                android:id="@+id/image_home_collection"
+                android:id="@+id/image_collectiontrip_collection"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
@@ -78,19 +77,19 @@
                 app:srcCompat="@drawable/ic_star_border_black_24dp" />
 
             <ImageButton
-                android:id="@+id/image_home_collection_tint"
+                android:id="@+id/image_collectiontrip_collection_tint"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:scaleType="fitCenter"
                 android:tint="#F9DB49"
-                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_star_black_24dp" />
 
 
             <TextView
-                android:id="@+id/text_home_collection_number"
+                android:id="@+id/text_collectiontrip_collection_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -101,38 +100,38 @@
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <ImageView
-                android:id="@+id/image_home_trip_collection"
+                android:id="@+id/image_collectiontrip_trip_collection"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:scaleType="fitXY"
                 android:tint="#F9DB49"
-                app:layout_constraintBottom_toBottomOf="@+id/text_home_collection_number"
-                app:layout_constraintEnd_toStartOf="@+id/text_home_collection_number"
-                app:layout_constraintTop_toTopOf="@+id/text_home_collection_number"
+                app:layout_constraintBottom_toBottomOf="@+id/text_collectiontrip_collection_number"
+                app:layout_constraintEnd_toStartOf="@+id/text_collectiontrip_collection_number"
+                app:layout_constraintTop_toTopOf="@+id/text_collectiontrip_collection_number"
                 app:srcCompat="@drawable/ic_star_black_24dp" />
 
             <TextView
-                android:id="@+id/text_home_owner_number"
+                android:id="@+id/text_collectiontrip_owner_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="32dp"
                 android:text="TextView"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/text_home_collection_number"
-                app:layout_constraintEnd_toEndOf="@+id/image_home_trip_collection"
-                app:layout_constraintTop_toTopOf="@+id/text_home_collection_number" />
+                app:layout_constraintBottom_toBottomOf="@+id/text_collectiontrip_collection_number"
+                app:layout_constraintEnd_toEndOf="@+id/image_collectiontrip_trip_collection"
+                app:layout_constraintTop_toTopOf="@+id/text_collectiontrip_collection_number" />
 
 
             <ImageView
-                android:id="@+id/image_home_owner_collection"
+                android:id="@+id/image_collectiontrip_owner_collection"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:paddingRight="0dp"
                 android:scaleType="centerCrop"
-                app:layout_constraintBottom_toBottomOf="@+id/text_home_collection_number"
-                app:layout_constraintEnd_toStartOf="@+id/text_home_owner_number"
-                app:layout_constraintTop_toTopOf="@+id/text_home_collection_number"
+                app:layout_constraintBottom_toBottomOf="@+id/text_collectiontrip_owner_number"
+                app:layout_constraintEnd_toStartOf="@+id/text_collectiontrip_owner_number"
+                app:layout_constraintTop_toTopOf="@+id/text_collectiontrip_owner_number"
                 app:srcCompat="@drawable/ic_person_outline_black_24dp" />
 
 
