--- a/app/src/main/res/layout/fragment_addordeletepoint.xml
+++ b/app/src/main/res/layout/fragment_addordeletepoint.xml
@@ -109,18 +109,6 @@
             app:layout_constraintStart_toEndOf="@+id/text_point_type"
             app:layout_constraintTop_toTopOf="@+id/text_point_type" />
 
-        <Spinner
-            android:id="@+id/spinner_point_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:entries="@array/icon_day_list"
-            android:spinnerMode="dialog"
-            app:layout_constraintBottom_toBottomOf="@+id/text_point_time"
-            app:layout_constraintStart_toEndOf="@+id/text_point_time"
-            app:layout_constraintTop_toTopOf="@+id/text_point_time"
-            app:layout_constraintVertical_bias="0.0" />
-
         <Button
             android:id="@+id/button_point_check"
             android:layout_width="wrap_content"
@@ -134,6 +122,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_point_time" />
+
+        <Button
+            android:id="@+id/button_point_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Button"
+            app:layout_constraintBottom_toBottomOf="@+id/text_point_time"
+            app:layout_constraintStart_toEndOf="@+id/text_point_time"
+            app:layout_constraintTop_toTopOf="@+id/text_point_time" />
 
 
     </android.support.constraint.ConstraintLayout>
